# auto_cal_ha_integration

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
.agents/: api-reference.md  integration-structure.md
.github/workflows/: ci.yml
custom_components/auto_cal/: __init__.py  api.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  todo.py
custom_components/auto_cal/translations/: en.json
tests/: conftest.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_habit.py  test_todo.py
