[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-cal-ha-integration"
version = "0.1.0"
description = "Home Assistant integration for Auto Cal"
requires-python = ">=3.12"
dependencies = ["icalendar>=5.0.0"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "aiohttp>=3.9",
    "icalendar>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
